--- a/src/routes/Products/styles.scss
+++ b/src/routes/Products/styles.scss
@@ -14,12 +14,11 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 1.5rem;
 
         .hero__title {
           font-weight: 700;
-          font-size: 64px;
-          line-height: 96px;
+          font-size: 4rem;
+          line-height: 4rem;
           color: $color-neutral-dark;
         }
         .hero__text {
@@ -27,6 +26,7 @@
           font-size: 24px;
           line-height: 36px;
           color: $color-neutral-medium;
+          margin: 1.5rem 0 2rem;
         }
         .search-products-wrapper {
           #search-products {
